--- a/lib/src/core/localization/app_en.arb
+++ b/lib/src/core/localization/app_en.arb
@@ -18,5 +18,6 @@
   "dark": "Dark",
   "system": "System Theme",
   "pleaseSelectALanguageFirst": "Please select a language first",
-  "optiponalLanguageInfo": "*This is optional, if you do not select a language, Whisper AI will detect your language automatically."
+  "optiponalLanguageInfo": "*This is optional, if you do not select a language, Whisper AI will detect your language automatically.",
+  "ok": "OK"
 }
