--- a/lib/src/core/localization/app_tr.arb
+++ b/lib/src/core/localization/app_tr.arb
@@ -19,5 +19,6 @@
   "system": "Sistem",
   "pleaseSelectALanguageFirst": "Lütfen önce bir dil seçiniz",
   "optiponalLanguageInfo": "*Bu isteğe bağlıdır, eğer bir dil seçmezseniz, Whisper AI dilinizi otomatik olarak algılayacaktır.",
-  "ok": "Tamam"
+  "ok": "Tamam",
+  "autoDetect": "Otomatik Algıla"
 }
